# mm_system

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.pytorch  Dockerfile.ros2  README.md  run.sh  run_mm_pytorch_container.sh  run_mm_ros2_container.sh  start_mm_tmux.sh
main_ws/: README.md  requirements.txt
main_ws/src/joint_controller/: package.xml
main_ws/src/joint_planner/: package.xml  setup.cfg  setup.py
main_ws/src/joint_planner/joint_planner/: qp_servo_node.py  qp_servo_piper_node.py
main_ws/src/mm_actions/: package.xml  setup.cfg  setup.py
main_ws/src/mm_actions/mm_actions/: mm_actions_node.py
main_ws/src/mm_actions/mm_actions/actions/: __init__.py  base_action.py  grasp.py  handover.py
main_ws/src/mm_actions/mm_actions/logging/: loggin.py
main_ws/src/mm_actions/mm_actions/motion/: __init__.py  piper_kinematic.py
main_ws/src/mm_actions/mm_actions/perception/: utils.py
main_ws/src/mm_actions/mm_actions/reasoning/: gemini_client.py
main_ws/src/mm_actions/resource/: mm_actions
main_ws/src/mm_interface/: CMakeLists.txt  package.xml
main_ws/src/mm_interface/msg/: JointPlannerCommand.msg  JointPlannerFeedback.msg  MotionPlannerCommand.msg  MotionPlannerFeedback.msg
main_ws/src/motion_planner/: package.xml
main_ws/src/motion_planner/motion_planner/: __init__.py  action_types.py  grasp_action.py  hand_over_action.py  motion_planner_node.py
main_ws/src/motion_planner/motion_planner/perception/: perception.py
main_ws/src/task_planner/: package.xml  setup.cfg  setup.py
main_ws/src/task_planner/task_planner/: gemini_client.py  task_planner_node.py
perception/: perception_model.py  perception_server.py  requirements.txt
