<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joint_controller</name>
  <version>0.0.0</version>
  <description>
    QP-based end-effector servo controller for a mobile manipulator.
    Accepts joint states and a target end-effector pose, and outputs
    joint position commands and base velocity commands at 40 Hz using
    a whole-body Quadratic Programming formulation.
  </description>
  <maintainer email="jerry110030014@gapp.nthu.edu.tw">mctsai</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>      <!-- JointState -->
  <depend>geometry_msgs</depend>    <!-- Pose, PoseStamped, Twist -->
  <depend>std_msgs</depend>         <!-- Int32 (status) -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
