<?xml version="1.0"?>
<package format="3">
  <name>mm_actions</name>
  <version>0.0.1</version>
  <description>Minimal action servers for grasp and handover.</description>
  <maintainer email="acm@todo.local">acm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mm_interface</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
